Fix alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 html {
   box-sizing: border-box;
 }
@@ -12,20 +17,27 @@ body {
   background: #bada55;
 }
 
-main {
+header, body, main, .board, li {
+  margin: 0 auto;
+}
+h1 {
+  text-align: center;
+}
 
+header, .board {
+  width: 80%;
 }
 
 .board {
-
-}
-
-ul {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
+  text-align: center;
+  justify-content: center;
+  justify-items: center;
 }
 
 li {
   list-style: none;
-  width: 100%
+  width: 100%;
+  /* justify-self: center; */
 }
